# FinalProject

./: Virtual_machine_HowTo
PA10WorkCell/: CollisionSetup.xml  ScenePA10RoVi1.wc.xml  ScenePA10RoVi1.wc.xml~
PA10WorkCell/Geometry/: WPtable.ac  WPtable.stl  conveyorBelt.ac  (+7 more)
Report/: refs.bib  report.aux  report.bbl  report.blg  report.tex
SamplePluginPA10/: CMakeLists.txt  README.md  recompileProject
markers/: CMakeLists.txt  main.cpp  marker1.cpp  marker1.cpp~  marker1.h  marker2.cpp  marker2a.cpp  marker2a.h
results/: .~lock.MarkerMotionFast_img_error_M_Targ_Pts.csv#  .~lock.joints_M_Targ_Pts.csv#  FastSequence_dT35_1Pt_following_error_vs_time.eps  MarkerMotionFast_img_error_1_Targ_Pt.csv  MarkerMotionFast_img_error_M_Targ_Pts.csv  MarkerMotionMedium_img_error_1_Targ_Pt.csv  MarkerMotionMedium_img_error_M_Targ_Pts.csv  MarkerMotionSlow_img_error_1_Targ_Pt.csv  MarkerMotionSlow_img_error_M_Targ_Pts.csv  MediumSequence_dT35_1Pt_following_error_vs_time.eps  MediumSequence_dT35_MPt_following_error_vs_time.eps  MediumSequence_dT50_MPt_following_error_vs_time.eps  MediumSequence_low_dTs_errors.eps  SlowSequence_dT35_MPt_following_error_vs_time.eps  SlowSequence_dT50_1Pt_following_error_vs_time.eps  SlowSequence_dT50_MPt_following_error_vs_time.eps  dUImage_1_Targ_Pt.csv  dUImage_M_Targ_Pts.csv  errorsPlot.m  img_error_1_Targ_Pt.csv  jointsPlot.m  joints_.csv  joints_1_Targ_Pt.csv  joints_M_Targ_Pts.csv  joints_velocities_1_Targ_Pt.csv  joints_velocities_M_Targ_Pts.csv  plotScript.m  plotScript.m~  tool_pose_.csv  tool_pose_1_Targ_Pt.csv  tool_pose_M_Targ_Pts.csv
(+95 files in other folders)
